lab_3/lab_3c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
  labels:
    app.kubernetes.io/name: mario
    app.kubernetes.io/instance: mario-<insert initials here>-lab3
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: lab3
spec:
  type: ClusterIP
  ports:
    - name: svc-port
      port: 80
      targetPort: cntr-port
      protocol: TCP
  selector:
    app.kubernetes.io/name: mario
    app.kubernetes.io/instance: mario-<insert initials here>-lab3
  sessionAffinity: None
