lab_3/lab_3c/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario
  labels:
    app.kubernetes.io/name: mario
    app.kubernetes.io/instance: mario-<insert initials here>-lab3
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: lab3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mario
                port:
                  name: svc-port
